--- a/lesson_6/задания 2 уровня/3-рейтинг/rating.html
+++ b/lesson_6/задания 2 уровня/3-рейтинг/rating.html
@@ -23,10 +23,10 @@
 
     <!-- Задание. Используя заготовку, сделайте чтобы при наведении на вторую звезду
     подсвечивались первая и вторая звезды. При наведени на третью звезду подсвечивались
-    первая, вторая и третья звезды, и т.д. 
+    первая, вторая и третья звезды, и т.д.
     mouseover - это событие срабатывает когда мы наводим на элемент.
     mouseout - это событие срабатывает когда мы перестаем наводить на элемент.
-	Вы можете пойти более продвинутым путем, и получать предыдущий элемент 
+	Вы можете пойти более продвинутым путем, и получать предыдущий элемент
 	например с помощью https://mzl.la/3a4SPlR
     -->
 
@@ -80,6 +80,15 @@
                 }
             })
         });
+
+        //еще один эксперимент... Он начинает криво убирать звезды. с каждым наведением все меньше загарается и убирается
+
+        // allStars.forEach(function(event){
+        //     event.addEventListener('mouseout', function() {
+        //         event.classList.remove(goldenClass);
+        //         event = event.previousElementSibling;
+        //     });
+        // });
 
 
     </script>
